dashboard/src/app/app.component.css
.row {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.chart {
    margin: 1rem;
}

.label {
    text-align: center;
    font-size: small;
    font-weight: bold;
    margin-bottom: 1rem;
}

.main {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}


.toolbar {
    margin: 1rem;
    display: flex;
    justify-content: space-between;
}

.details {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.title {
    font-size: x-large;
    margin: 1rem;
}

.subtitle {
    font-size: small;
    margin: 5px;
}

.github-link {
    display: flex;
    align-items: center;
}

.github-link img {
    height: 20px;
    width: auto;
    margin: 5px;
}

